crates/component-cli/tests/snapshots/test__cli_registry_search_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Search for packages across configured registries

Usage: component registry search [OPTIONS] [QUERY]

Arguments:
  [QUERY]  Search query (matches package name and description)

Options:
      --exports <EXPORTS>  Filter to packages that export a given interface (e.g. wasi:http)
      --imports <IMPORTS>  Filter to packages that import a given interface (e.g. wasi:http)
      --limit <LIMIT>      Maximum number of results to show [default: 20]
  -h, --help               Print help
  -V, --version            Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
