crates/component-cli/tests/snapshots/test__cli_self_state_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Print diagnostics about the local state

Usage: component self state [OPTIONS]

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
