crates/component-cli/tests/snapshots/test__init_help_snapshot.snap
---
source: crates/component-cli/tests/test.rs
expression: output
---
Create a new wasm component in an existing directory

Usage: component init [OPTIONS] [PATH]

Arguments:
  [PATH]  The directory in which to create the wasm package files. Defaults to the current directory [default: .]

Options:
  -h, --help     Print help
  -V, --version  Print version

Global Options:
      --color <WHEN>  When to use colored output [default: auto] [possible values: auto, always, never]
      --offline       Run in offline mode
  -v, --verbose...    Increase logging verbosity
  -q, --quiet...      Decrease logging verbosity
