crates/component-cli/tests/snapshots/test__install_without_init.snap
---
source: crates/component-cli/tests/test.rs
expression: stderr
---
Error: wasm::install::no_manifest

  × no local `wasm.toml` manifest found
  help: call `component init` to create a `wasm.toml` manifest locally
        call `wasm registry fetch <component>` to fetch the package without
        affecting the local manifest
